tests/fail/assignment.py
a: int
b: float = True
c: not_valid = 100
